--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,10 +9,10 @@
     tools:context="project.senior.hardhats.LoginActivity">
 
     <ImageView
-        android:id="@+id/login_LogoImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/logo"
+        android:contentDescription="Hardhats Logo" />
 
 
 
@@ -47,12 +47,6 @@
         android:inputType="textPassword"
         android:maxLength="@integer/MAXPASSWORDLENGTH"
         android:text=""/>
-    </android.support.design.widget.TextInputLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
         <Button
             android:id="@+id/login_LoginButton"
@@ -61,7 +55,7 @@
             android:layout_weight="1"
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/login_Login" />
-    </LinearLayout>
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:background="?android:attr/selectableItemBackground"
@@ -76,15 +70,14 @@
         android:layout_height="wrap_content"
         android:text="@string/login_About"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        tools:layout_editor_absoluteX="-1dp"
-        tools:layout_editor_absoluteY="568dp" />
+        />
 
     <Button
         android:background="?android:attr/selectableItemBackground"
         android:id="@+id/main_debug"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="debug" />
+        android:text="@string/login_debug" />
 
 </LinearLayout>
 
