--- a/app/src/main/res/layout/fragment_invoice_preview_list.xml
+++ b/app/src/main/res/layout/fragment_invoice_preview_list.xml
@@ -12,28 +12,27 @@
         android:layout_weight="1">
 
         <TextView
-            android:id="@+id/fragmentinvoicepreviewlist_leftTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:paddingLeft="20dp"
-            android:text="NAME" />
+            android:layout_alignParentStart="true"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:text="@string/fragmentinvicepreviewlist_name" />
 
         <TextView
-            android:id="@+id/fragmentinvoicepreviewlist_middleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:text="TOTAL" />
+            android:text="@string/fragmentinvicepreviewlist_total" />
 
         <TextView
-            android:id="@+id/fragmentinvoicepreviewlist_rightTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:paddingRight="20dp"
-            android:text="DATE" />
+            android:layout_alignParentEnd="true"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:text="@string/fragmentinvicepreviewlist_date" />
 
     </RelativeLayout>
 
