--- a/app/src/main/res/layout/invoicelistitem.xml
+++ b/app/src/main/res/layout/invoicelistitem.xml
@@ -11,7 +11,7 @@
 
         <TextView
             android:id="@+id/invoicelistitem_line1TextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="0dp"
