--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,32 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal|center"
+    android:gravity="bottom|center_vertical"
     android:orientation="vertical"
     tools:context="project.senior.hardhats.LoginActivity">
+
+    <TextView
+        android:id="@+id/login_AboutTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:paddingRight="20dp"
+        android:text="@string/login_About"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo"
-        android:contentDescription="Hardhats Logo" />
-
+        android:layout_marginBottom="150dp"
+        android:layout_marginTop="100dp"
+        android:contentDescription="Hardhats Logo"
+        app:srcCompat="@drawable/logo" />
 
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/login_usernameTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <EditText
-        android:id="@+id/login_UserNameEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:fontFamily="monospace"
-        android:hint="@string/login_Username"
-        android:inputType="textPersonName"
-        android:maxLength="@integer/MAXUSERNAMELENGTH"
-        android:text=""/>
+
+        <EditText
+            android:id="@+id/login_UserNameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:fontFamily="monospace"
+            android:hint="@string/login_Username"
+            android:inputType="textPersonName"
+            android:maxLength="@integer/MAXUSERNAMELENGTH"
+            android:text="" />
     </android.support.design.widget.TextInputLayout>
 
 
@@ -37,16 +48,17 @@
         android:id="@+id/login_passwordTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <EditText
-        android:id="@+id/login_PasswordEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:fontFamily="monospace"
-        android:hint="@string/login_Password"
-        android:inputType="textPassword"
-        android:maxLength="@integer/MAXPASSWORDLENGTH"
-        android:text=""/>
+
+        <EditText
+            android:id="@+id/login_PasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:fontFamily="monospace"
+            android:hint="@string/login_Password"
+            android:inputType="textPassword"
+            android:maxLength="@integer/MAXPASSWORDLENGTH"
+            android:text="" />
 
         <Button
             android:id="@+id/login_LoginButton"
@@ -58,26 +70,11 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:background="?android:attr/selectableItemBackground"
         android:id="@+id/login_RegisterButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/login_Register" />
-
-    <TextView
-        android:id="@+id/login_AboutTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_About"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        />
-
-    <Button
         android:background="?android:attr/selectableItemBackground"
-        android:id="@+id/main_debug"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_debug" />
+        android:text="@string/login_Register" />
 
 </LinearLayout>
 
