--- a/app/src/main/res/layout/fragment_invoice_line_preview.xml
+++ b/app/src/main/res/layout/fragment_invoice_line_preview.xml
@@ -8,6 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:orientation="vertical">
 
 
@@ -15,7 +17,9 @@
             android:id="@+id/fragmentInvoiceLinePreview_previewListView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="100" />
+            android:layout_weight="100"
+            android:divider="@null"
+            android:dividerHeight="10dp" />
 
         <TextView
             android:id="@+id/fragmentInvoiceLinePreview_totalTextView"
