--- a/app/src/main/res/layout/invoicelistitem.xml
+++ b/app/src/main/res/layout/invoicelistitem.xml
@@ -15,8 +15,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="0dp"
-            android:text=""
-            android:textAppearance="@android:style/TextAppearance.Material.Large" />
+            android:textSize="12sp"
+            android:typeface="monospace"
+            android:text=""/>
 
     </LinearLayout>
 
@@ -30,16 +31,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:layout_alignParentLeft="true"
-            android:textAppearance="@android:style/TextAppearance.Material.Large" />
+            android:textSize="12sp"
+            android:typeface="monospace"
+            android:layout_alignParentLeft="true" />
 
         <TextView
             android:id="@+id/invoicelistitem_line2RightTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:layout_alignParentRight="true"
-            android:textAppearance="@android:style/TextAppearance.Material.Large" />
+            android:textSize="12sp"
+            android:typeface="monospace"
+            android:layout_alignParentRight="true" />
 
     </RelativeLayout>
 </LinearLayout>
