--- a/app/src/main/res/layout/activity_invoice_actions.xml
+++ b/app/src/main/res/layout/activity_invoice_actions.xml
@@ -92,4 +92,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/snackbarPosition"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
