--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,14 +14,15 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:paddingRight="20dp"
+        android:paddingBottom="40dp"
         android:text="@string/login_About"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="150dp"
-        android:layout_marginTop="100dp"
+        android:layout_height="130dp"
+        android:layout_marginBottom="120dp"
+        android:layout_marginTop="60dp"
         android:contentDescription="Hardhats Logo"
         app:srcCompat="@drawable/logo" />
 
