--- a/app/src/main/res/layout/activity_backup_address_handler.xml
+++ b/app/src/main/res/layout/activity_backup_address_handler.xml
@@ -66,6 +66,7 @@
     </LinearLayout>
 
     <Button
+        android:background="?android:attr/selectableItemBackground"
         android:id="@+id/backup_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -73,6 +74,7 @@
         android:text="@string/backup_continue" />
 
     <Button
+        android:background="?android:attr/selectableItemBackground"
         android:id="@+id/backup_cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
