--- a/app/src/main/res/layout/fragment_invoice.xml
+++ b/app/src/main/res/layout/fragment_invoice.xml
@@ -8,12 +8,14 @@
     <!-- TODO: Update blank fragment layout -->
 
     <Button
+        android:background="?android:attr/selectableItemBackground"
         android:id="@+id/fragmentInvoice_GenerateInvoiceButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/fragment_generateinvoice_GenerateInvoice" />
 
     <Button
+        android:background="?android:attr/selectableItemBackground"
         android:id="@+id/fragmentInvoice_backToPreviewButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
