--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -21,6 +21,7 @@
                 android:orientation="vertical" >
 
                 <Button
+                    android:background="?android:attr/selectableItemBackground"
                     android:id="@+id/fragmentOptions_LogoutButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
